class Animal {
  final String type;
  final String sound;
  Animal(this.type, this.sound);

}