class Book {
  String title, author, genre;

  Book(this.title, this.author, this.genre);
}